--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
     height: 92vh;
     text-align: center;
     padding-top: 20%;
+    
 }
-background-image
+.menu{
+    background-color: tomato;
+    background-position: relative;
+    background-image: url(../image/jarren-horrocks-nVFp3nTWAbA-unsplash.jpg);
+    background-repeat: no-repeat;
+    padding-left: 15%;
+    background-size: contain;
+}
 
